syntax = "proto3";

package authv1;

import "authv1/login.proto";
import "google/api/annotations.proto";

// @no-auth unless annotated otherwise
service AuthService {
  // Returns a token that should be used for all subsequent requests.
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (sebuf.http.config) = {
      path:"/osn/auth/v1/login"
    };
  }
}